# Vulture

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_cv_profile_expansion.py
src/vulture/: __main__.py  config.py  logging_config.py  main.py  types.py
src/vulture/api/: app.py  deps.py  routes.py  schemas.py
src/vulture/browser/: adapter.py  answering.py  domain_adapters.py  engine.py
src/vulture/cli/: app.py
src/vulture/core/: cv_parser.py  events.py  job_fetcher.py  modes.py  orchestrator.py  question_templates.py  runtime.py
src/vulture/db/: init.py  models.py  repositories.py  seed.py  session.py
src/vulture/llm/: prompts.py  providers.py  router.py
src/vulture/web/: routes.py
src/vulture/web/static/: style.css
src/vulture/web/templates/: base.html  dashboard.html  not_found.html  profile_detail.html  profile_questionnaire_review.html  run_detail.html
tests/: conftest.py
tests/e2e/: test_mode_behaviors.py  test_profile_questionnaire_review_flow.py
tests/integration/: test_api_profiles.py  test_cv_import_api.py  test_db_migration.py  test_llm_router.py  test_orchestrator_approval_flow.py  test_web_icons.py
tests/unit/: test_browser_adapter_profile.py  test_cv_parser.py  test_domain_adapters.py  test_llm_provider_compat.py  test_mode_policy.py  test_patch_validation.py  test_question_hash.py
