[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vulture"
version = "0.1.0"
description = "Autonomous job application assistant with browser-use, SQLite, and hybrid LLM routing."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vulture" }]
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.3",
  "browser-use>=0.11.9",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "openai>=1.58.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "typer>=0.15.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[project.scripts]
vulture = "vulture.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
